Layout issue changes

--- a/apps/lintme-ui/global.css
+++ b/apps/lintme-ui/global.css
@@ -7,3 +7,8 @@ body {
   }
 
 
+html, body, #app {
+  width: 100vw;
+  max-width: 100vw;
+  overflow-x: hidden;
+}
